--- a/foto.html
+++ b/foto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+<link rel="stylesheet" href="foto.css">
 <head>
     <meta charset="UTF-8">
     <title>Parabéns! 😂</title>
