--- a/luck.html
+++ b/luck.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🎁 MÃE SOLTEIRA E IPHONES 256GB</h1>
+        <h1>🎁 MÃE SOLTEIRA E IPHONES 256GB 🍌🍑🍒 🥵🥵</h1>
         <p>Ganhe um IPHONE e uma mãe solteira totalmente gratuito somente clicando no botão abaixo</p>
         <button onclick="window.location.href='foto.html'">🎉 RESGATAR AGORA</button>
     </div>
